main body first section  class web-dev-section-head added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
         </div>
     </header>
     <main>
+        <section class="web-dev-section">
+            <div class="web-dev-section-head">
+                <h1>Why Web Development??</h1>
+                <p>It's a great career choice! Web development combines creativity and problem-solving to turn ideas into functional websites. It's a field that's constantly evolving, offering new challenges and opportunities to learn.</p>
+            </div>
+            <div class="web-dev-section-details">
 
+            </div>
+            
+        </section>
     </main>
     <footer>
 
