main body first section details added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,41 @@
                 <p>It's a great career choice! Web development combines creativity and problem-solving to turn ideas into functional websites. It's a field that's constantly evolving, offering new challenges and opportunities to learn.</p>
             </div>
             <div class="web-dev-section-details">
+                <div class="web-content">
+                    <h3>I will Do Coding and Change The <br> World</h3>
+                    <p>Coding is the reason people can do anything with the click of a button. Read on to find out how coding has changed the world for the better.</p>
+                    <button>Learn More</button>
+
+                </div>
+                <div class="web-image">
+                    <img src="assets/Layer_1.png" alt="">
+                </div>
+
+            </div>
+            <div class="web-dev-section-details">
+
+                <div class="web-image">
+                    <img src="assets/Group 3.png" alt="">
+                </div>
+                <div class="web-content">
+                    <h3>I will help People by creating Modern Web System</h3>
+                    <p>Modern web applications are built to support rapid change and exponential growth. Your enterprise is built through web-based application programming interfaces (APIs), allowing RESTful calls between different parts of your application and its services.</p>
+                    <button>Learn More</button>
+
+                </div>
+                
+
+            </div>
+            <div class="web-dev-section-details">
+                <div class="web-content">
+                    <h3>I will Do Coding and Change The World</h3>
+                    <p>Coding is the reason people can do anything with the click of a button. Read on to find out how coding has changed the world for the better.</p>
+                    <button>Learn More</button>
+
+                </div>
+                <div class="web-image">
+                    <img src="assets/Group 4.png" alt="">
+                </div>
 
             </div>
             
