main body inspiration section completed

--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
             </div>
             
         </section>
+        <section class="inspiration-secion">
+            <div class="inspiration-content">
+                <h2>My Inspiration</h2>
+                <p>Don't try to read everything on coding; try to look at particular functions and snippets of code that you are interested in</p>
+            </div>
+            <div class="inspiration-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/JUwePydwbUI?si=k8GCjpyDJaCJ-6L2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen ></iframe>
+            </div>
+        </section>
     </main>
     <footer>
 
