main body my-terget-section completed

--- a/index.html
+++ b/index.html
@@ -72,6 +72,41 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/JUwePydwbUI?si=k8GCjpyDJaCJ-6L2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen ></iframe>
             </div>
         </section>
+        <section class="current-terget-section">
+            <div class="current-terget-content">
+                <h2>My Current Target</h2>
+                <p>As a web developer, the three main languages we use to build websites are HTML, CSS, and JavaScript.</p>
+            </div>
+           <div class="card-container">
+
+            <div class="card-content">
+                <div>
+                    <img src="assets/html.png" alt="">
+                    <h2>HTML</h2>
+                    <p> HTML is the standard markup language for Web pages. With HTML you can create your own Website.</p>
+                    <a href="#">Learn More</a>
+                </div>
+            </div>
+            <div class="card-content middle-card">
+                <div>
+                    <img src="assets/css.png" alt="">
+                    <h2>CSS</h2>
+                    <p>CSS is the language we use to style an HTML document. CSS describes how HTML elements should be displayed. </p>
+                    <a href="#">Learn More</a>
+                </div>
+            </div>
+            <div class="card-content end-card">
+                <div>
+                    <img src="assets/js.png" alt="">
+                    <h2>JavaScript</h2>
+                    <p>JavaScript (JS) is a lightweight interpreted programming language with first-class functions.</p>
+                    <a href="#">Learn More</a>
+                </div>
+            </div>
+
+           </div>
+
+        </section>
     </main>
     <footer>
 
