footer section completed

--- a/index.html
+++ b/index.html
@@ -120,7 +120,16 @@
                 </div>
             
         </section>
-        
+        <section class="social-links">
+            <div>
+                <h3>An open commitment by Md Rumman Mahfuj</h3>
+            </div>
+            <div id="link-img">
+                <a href="https://www.facebook.com/profile.php?id=100054060243431&mibextid=ZbWKwL"><img src="assets/facebook.png" alt=""></a>
+                <a href="https://github.com/rumman321"><img src="assets/github.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/rumman-mahfuz-99a59426a/"><img src="assets/linkedin-icon 1.png" alt=""></a>
+            </div>
+        </section>
     </footer>
 
 </body>
