click  contact with me btn  and direct footer section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="assets/Group.png" alt="">
             <h1>"In the near future, I hope to become a Developer."</h1>
             <p>I am currently a student studying computer engineering at Daffodil University, in Dhacca, Bangladesh. I am comfortable in a good deal of programming languages, including  C, C++, Python, PHP, Java etc </p>
-            <button>Contact with me</button>
+           <a href="#footer"> <button>Contact with me</button></a>
         </div>
     </header>
     <main>
@@ -108,7 +108,7 @@
 
         </section>
     </main>
-    <footer>
+    <footer id="footer">
         <section class="supports">
           
                 <h2>I need Support </h2>
